--- a/index.html
+++ b/index.html
@@ -112,7 +112,23 @@
     </div>
 
     <!--/first slider-->
+
+    <!--second slider-->
+    <div class="container-fluid">
+        <div class="site-slider-two px-md-4">
+            <div class="row">
+                <div class="col-md-2 product pt-md-5 pt-4">
+                    <img src="./assets/item-1.jpg" alt="#">
+                    <span>58.46</span>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--/second slider-->
   </main>
+
   <!--/main section-->
   <footer>
 
