--- a/index.html
+++ b/index.html
@@ -116,13 +116,41 @@
     <!--second slider-->
     <div class="container-fluid">
         <div class="site-slider-two px-md-4">
-            <div class="row">
+            <div class="row slider-two-center">
                 <div class="col-md-2 product pt-md-5 pt-4">
                     <img src="./assets/item-1.jpg" alt="#">
-                    <span>58.46</span>
+                    <span class="border site-btn btn-span">SOFA & CHAIR</span>
 
-                </div>
+                </div> <div class="col-md-2 product pt-md-5 pt-4">
+                  <img src="./assets/item-2.jpg" alt="#">
+                  <span class="border site-btn btn-span">FURNITURE & DECOR</span>
+
+              </div>
+              <div class="col-md-2 product pt-md-5 pt-4">
+                <img src="./assets/item-3.jpg" alt="#">
+                <span class="border site-btn btn-span">LAMP & LIGHTING</span>
+
             </div>
+            <div class="col-md-2 product pt-md-5 pt-4">
+              <img src="./assets/item-1.jpg" alt="#">
+              <span class="border site-btn btn-span">SOUND & LIFE </span>
+
+          </div>
+          <div class="col-md-2 product pt-md-5 pt-4">
+            <img src="./assets/item-2.jpg" alt="#">
+            <span class="border site-btn btn-span">APPLIANCES</span>
+
+        </div>
+        <div class="col-md-2 product pt-md-5 pt-4">
+          <img src="./assets/item-3.jpg" alt="#">
+          <span class="border site-btn btn-span">LAMP & LIGHTING</span>
+
+        </div>
+      </div>
+              <div class="slider-btn">
+                <span class="prev position-top"><i class="fas fa-chevron-left fa-2x text-secondary"></i></span>
+                <span class="next position-top right-0"><i class="fas fa-chevron-right fa-2x text-secondary"></i></span>
+              </div>
         </div>
     </div>
 
