--- a/index.html
+++ b/index.html
@@ -155,6 +155,22 @@
     </div>
 
     <!--/second slider-->
+
+    <hr class="hr"/>
+
+    <!--features section-->
+
+    <div class="container .text-center">
+      <div class="features">
+        <h1>Features Products</h1>
+        <p class="text-secondry">
+            Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. 
+        </p>
+
+      </div>
+
+    </div>
+    <!--/features section-->
   </main>
 
   <!--/main section-->
