--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
           <div>
             <img src="./assets/item-2.jpg" class="img-fluid " alt="item 2">
           </div>
+          
           <div>
             <img src="./assets/item-3.jpg" class="img-fluid" alt="item 3">
           </div>
@@ -149,7 +150,8 @@
       </div>
               <div class="slider-btn">
                 <span class="prev position-top"><i class="fas fa-chevron-left fa-2x text-secondary"></i></span>
-                <span class="next position-top right-0"><i class="fas fa-chevron-right fa-2x text-secondary"></i></span>
+                <span class="next position-top right-0"><i class="fas fa-chevron-right fa-2x text-secondary"></i>
+                </span>
               </div>
         </div>
     </div>
@@ -160,7 +162,7 @@
 
     <!--features section-->
 
-    <div class="container .text-center">
+    <div class="container text-center">
       <div class="features">
         <h1>Features Products</h1>
         <p class="text-secondry">
@@ -170,7 +172,165 @@
       </div>
 
     </div>
+
+    <!--features third slider-->
+    <div class="container-fluid">
+      <div class="site-slider-three px-md-4">
+        <div class="slider-three row text-center px-4">
+          <!--item 1-->
+          <div class="col-md-2 product pt-md-5">
+              <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+              <div class="cart-details">
+                <h6 class="pro-title p-0">Vinyl Top Folding Table</h6>
+                <div class="rating">
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star-half-alt"></i>
+                </div>
+                <div class="pro-price py-2">
+                  <h5>
+                    <small><s class="text-secondary">€125.99</s></small>
+                    <span>€120.00</span>
+                  </h5>
+
+                </div>
+                <div class="cart mt-4">
+                  <button class="border site-btn btn-span">Add To Cart</button>
+                </div>
+              </div>
+          </div>
+          <!--item 2-->
+          <div class="col-md-2 product pt-md-5">
+              <img src="./assets/item-2.jpg"class="img-fluid" alt="#">
+              <div class="cart-details">
+                <h6 class="pro-title p-0">Ikea Rusch 25x4 Wall</h6>
+                <div class="rating">
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star"></i>
+                </div>
+                <div class="pro-price py-2">
+                  <h5>
+                    <small><s class="text-secondary">€119.99</s></small>
+                    <span>€103.00</span>
+                  </h5>
+
+                </div>
+                <div class="cart mt-4">
+                  <button class="border site-btn btn-span">Add To Cart</button>
+                </div>
+              </div>
+          </div>
+          <!--item 3-->
+          <div class="col-md-2 product pt-md-5">
+              <img src="./assets/item-3.jpg"class="img-fluid" alt="#">
+              <div class="cart-details">
+                <h6 class="pro-title p-0">Himalayan Salt Lamp Touch</h6>
+                <div class="rating">
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star"></i>
+                </div>
+                <div class="pro-price py-2">
+                  <h5>
+                    <small><s class="text-secondary">€469.99</s></small>
+                    <span>€449.00</span>
+                  </h5>
+
+                </div>
+                <div class="cart mt-4">
+                  <button class="border site-btn btn-span">Add To Cart</button>
+                </div>
+              </div>
+          </div>
+          <!--imem 4-->
+          <div class="col-md-2 product pt-md-5">
+              <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+              <div class="cart-details">
+                <h6 class="pro-title p-0">Table Lamp Beside Desk</h6>
+                <div class="rating">
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star-half-alt"></i>
+                </div>
+                <div class="pro-price py-2">
+                  <h5>
+                    <span>€120.00</span>
+                  </h5>
+
+                </div>
+                <div class="cart mt-4">
+                  <button class="border site-btn btn-span">Add To Cart</button>
+                </div>
+              </div>
+          </div>
+          <!--item-5-->
+          <div class="col-md-2 product pt-md-5">
+              <img src="./assets/item-2.jpg"class="img-fluid" alt="#">
+              <div class="cart-details">
+                <h6 class="pro-title p-0">Parsons Modern End</h6>
+                <div class="rating">
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star"></i>
+                  <i class="fas-fa-star-half-alt"></i>
+                </div>
+                <div class="pro-price py-2">
+                  <h5>
+                    <small><s class="text-secondary">€259.99</s></small>
+                    <span>€240.00</span>
+                  </h5>
+
+                </div>
+                <div class="cart mt-4">
+                  <button class="border site-btn btn-span">Add To Cart</button>
+                </div>
+              </div>
+          </div>
+          <!--item 6-->
+          <div class="col-md-2 product pt-md-5">
+              <img src="./assets/item-3.jpg"class="img-fluid" alt="#">
+              <div class="cart-details">
+                <h6 class="pro-title p-0">Outdoor Patio Teak Slide Table</h6>
+                <div class="rating">
+                  <span>Write your review</span> 
+                </div>
+                <div class="pro-price py-2">
+                  <h5>
+                    <small><s class="text-secondary">€139.99</s></small>
+                    <span>€124.00</span>
+                  </h5>
+
+                </div>
+                <div class="cart mt-4">
+                  <button class="border site-btn btn-span">Add To Cart</button>
+                </div>
+              </div>
+          </div>
+        </div>
+        <!--arrows for section-->
+        <div class="slider-btn">
+            <span class="prev position-top"><i class="fas fa-chevron-left fa-2x text-secondary"></i></span>
+            <span class="next position-top right-0"><i class="fas fa-chevron-right fa-2x text-secondary"></i>
+            </span>
+          </div>
+      </div>
+
+    </div>
+    <!--/features third slider-->
+
     <!--/features section-->
+
+    
   </main>
 
   <!--/main section-->
