--- a/index.html
+++ b/index.html
@@ -330,6 +330,87 @@
 
     <!--/features section-->
 
+    <!--sofa section-->
+    <div class="container-fluid sofa bg-light">
+      <div class="row">
+        <div class="col-md-6 col-12">
+          <div class="row box">
+            <div class="col-md-2 p-0 pl-md-3 bg-white offset-1 d-flex flex-md-column flex-sm-row">
+              <!--Days-->
+              <div class="py-md-2 py-2 mt-3 bg-white border text-center">
+                <h5 class="primary-color">
+                  <strong>125</strong>
+                </h5>
+                <em>days</em>
+              </div>
+               <!--Hours-->
+              <div class="py-md-2 py-2 mt-3 bg-white border text-center">
+                  <h5 class="primary-color">
+                    <strong>5</strong>
+                  </h5>
+                  <em>Hours</em>
+                </div>
+                 <!--Mins-->
+                <div class="py-md-2 py-2 mt-3 bg-white border text-center">
+                    <h5 class="primary-color">
+                      <strong>25</strong>
+                    </h5>
+                    <em>Mins</em>
+                  </div>
+                   <!--Seconds-->
+                  <div class="py-md-2 py-2 mt-3 bg-white border text-center">
+                      <h5 class="primary-color">
+                        <strong>12</strong>
+                      </h5>
+                      <em>Seconds</em>
+                    </div>
+            </div>
+            <!--changed p-0 to p-2-->
+            <div class="col-md-8 p-2 bg-white">
+              <div class="text-left">
+                  <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-12 pt-5">
+          <h4 class="text-left">Upholstered Frabic Sofa</h4>
+          <p class="text-secondary pr-5 pt-3">
+            <small>
+                Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            </small>
+          </p>
+          <div class="rating lightblue">
+            <i class="fas-fa-star"></i>
+            <i class="fas-fa-star"></i>
+            <i class="fas-fa-star"></i>
+            <i class="fas-fa-star"></i>
+            <i class="fas-fa-star"></i>
+          </div>
+          <h4 class="pt-2">
+            <small><s class="text-seconday">€519.99</s></small>
+            <span class="text-color">€499.99
+
+            </span>
+          </h4>
+          <div class="cart mt-4 row">
+            <div class="col md-4 col-sm-12 p-0">
+              <button class="border site-btn btn-span bg-primary-color text-white">Add To Cart</button>
+            </div>
+            <div class="col-md-5 col-sm-12 p-0 mt-3">
+              <!--item 1-->
+              <span class="p-3 bg-white border rounded-circle"><i class="fas-fa-heart"></i></span>
+              <!--item 2-->
+              <span class="p-3 bg-white border rounded-circle"><i class="fas-fa-sync-alt"></i></span>
+              <!--item 3-->
+              <span class="p-3 bg-white border rounded-circle"><i class="fas-fa-search"></i></span>
+            </div>
+          </div>
+        </div>
+      </div>
+     </div>
+    <!--/features section-->
+
     
   </main>
 
