finished sofa section

--- a/index.html
+++ b/index.html
@@ -399,16 +399,18 @@
             </div>
             <div class="col-md-5 col-sm-12 p-0 mt-3">
               <!--item 1-->
-              <span class="p-3 bg-white border rounded-circle"><i class="fas-fa-heart"></i></span>
+              <span class="p-3 bg-white border rounded-circle"><i class="far fa-heart"></i></span>
               <!--item 2-->
-              <span class="p-3 bg-white border rounded-circle"><i class="fas-fa-sync-alt"></i></span>
+              <span class="p-3 bg-white border rounded-circle"><i class="fas fa-sync-alt"></i></span>
               <!--item 3-->
-              <span class="p-3 bg-white border rounded-circle"><i class="fas-fa-search"></i></span>
+              <span class="p-3 bg-white border rounded-circle"><i class="fas fa-search"></i></span>
             </div>
           </div>
         </div>
       </div>
      </div>
+
+      <!--/sofa section-->
     <!--/features section-->
 
     
