finished up to advert section

--- a/index.html
+++ b/index.html
@@ -411,10 +411,69 @@
      </div>
 
       <!--/sofa section-->
-    <!--/features section-->
 
-    
-  </main>
+      <div class="container-fluid">
+        <div class="site-slider-four px-md-4">
+          <div class="slider-four row text-center">
+            <!--image 1-->
+            <div class="col-md-2 product pt-md-5">
+              <img src="./assets/item-1.jpg"class="border img-fluid" alt="#">
+            </div>
+            <!--image 2-->
+            <div class="col-md-2 product pt-md-5">
+              <img src="./assets/item-2.jpg"class="border img-fluid" alt="#">
+            </div>
+            <!--image 3-->
+            <div class="col-md-2 product pt-md-5">
+                <img src="./assets/item-3.jpg"class="border img-fluid" alt="#">
+              </div>
+            <!--image 4-->
+            <div class="col-md-2 product pt-md-5">
+                <img src="./assets/item-1.jpg"class="border img-fluid" alt="#">
+              </div>
+            <!--image 5-->
+            <div class="col-md-2 product pt-md-5">
+                <img src="./assets/item-2.jpg"class="border img-fluid" alt="#">
+              </div>
+            <!--image 6-->
+            <div class="col-md-2 product pt-md-5">
+                <img src="./assets/item-3.jpg"class="border img-fluid" alt="#">
+              </div>
+          </div>
+          <!--arrows for section-->
+        <div class="slider-btn">
+            <span class="prev position-top"><i class="fas fa-chevron-left fa-2x text-secondary"></i></span>
+            <span class="next position-top right-0"><i class="fas fa-chevron-right fa-2x text-secondary"></i>
+            </span>
+          </div>
+          <!--/arrows for section-->
+        </div>
+      </div>
+
+      <!--advert section-->
+      <div class="container my-5">
+        <div class="row">
+          <div class="col-md-8 col-12">
+              <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+          </div>
+          <div class="col-md-4 col-12">
+              <img src="./assets/item-2.jpg"class="img-fluid" alt="#">
+          </div>
+        </div>
+        <div class="row my-md-3">
+          <div class="col-md-4 col-12">
+              <img src="./assets/item-3.jpg"class="img-fluid" alt="#">
+          </div>
+          <div class="col-md-8 col-12">
+              <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+          </div>
+        </div>
+
+      </div>
+      <!--/advert section-->
+
+
+ </main>
 
   <!--/main section-->
   <footer>
