best sellers section

--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
               <div class="cart-details">
                 <h6 class="pro-title p-0">Vinyl Top Folding Table</h6>
                 <div class="rating">
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star-half-alt"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
                 </div>
                 <div class="pro-price py-2">
                   <h5>
@@ -207,11 +207,11 @@
               <div class="cart-details">
                 <h6 class="pro-title p-0">Ikea Rusch 25x4 Wall</h6>
                 <div class="rating">
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
                 </div>
                 <div class="pro-price py-2">
                   <h5>
@@ -231,11 +231,11 @@
               <div class="cart-details">
                 <h6 class="pro-title p-0">Himalayan Salt Lamp Touch</h6>
                 <div class="rating">
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
                 </div>
                 <div class="pro-price py-2">
                   <h5>
@@ -255,11 +255,11 @@
               <div class="cart-details">
                 <h6 class="pro-title p-0">Table Lamp Beside Desk</h6>
                 <div class="rating">
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star-half-alt"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
                 </div>
                 <div class="pro-price py-2">
                   <h5>
@@ -278,11 +278,11 @@
               <div class="cart-details">
                 <h6 class="pro-title p-0">Parsons Modern End</h6>
                 <div class="rating">
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star"></i>
-                  <i class="fas-fa-star-half-alt"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
                 </div>
                 <div class="pro-price py-2">
                   <h5>
@@ -323,6 +323,7 @@
             <span class="next position-top right-0"><i class="fas fa-chevron-right fa-2x text-secondary"></i>
             </span>
           </div>
+          <!--/arrows for section-->
       </div>
 
     </div>
@@ -472,7 +473,268 @@
       </div>
       <!--/advert section-->
 
-
+      <!--new best sellers section-->
+      <div class="container">
+        <div class="newseller">
+          <div class="row">
+            <div class="col-md-4 col-sm-6">
+              <h3 class="text-secondary">New Arrivals</h3>
+              <!--item 1-->
+              <div class="row py-3">
+                <div class="col-md-3 p-0">
+                  <div class="items-border">
+                      <img src="./assets/item-3.jpg"class="img-fluid" alt="#">
+                  </div>
+                </div>
+                <div class="col-md-9 p-0 py-4 py-md-0">
+                  <div class="px-4">
+                    <h6>Vinyl Top Folding Table</h6>
+                    <div class="rating pb-2">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h5>
+                    <small><s class="text-secondary">€125.99</s></small>
+                    <span class="text-color">€120.50</span>
+                    </h5>
+                  </div>
+                </div>
+              </div>
+              <!--item 2-->
+              <div class="row py-3">
+                  <div class="col-md-3 p-0">
+                    <div class="items-border">
+                        <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+                    </div>
+                  </div>
+                  <div class="col-md-9 p-0 py-4 py-md-0">
+                    <div class="px-4">
+                      <h6>Parsons Mordern End Black</h6>
+                      <div class="rating pb-2">
+                          <i class="fas fa-star"></i>
+                          <i class="fas fa-star"></i>
+                          <i class="fas fa-star"></i>
+                          <i class="fas fa-star"></i>
+                      </div>
+                      <h5>
+                      <small><s class="text-secondary">€12.99</s></small>
+                      <span class="text-color">€12.50</span>
+                      </h5>
+                    </div>
+                  </div>
+                </div>
+              <!--item 3-->
+              <div class="row py-3">
+                  <div class="col-md-3 p-0">
+                    <div class="items-border">
+                        <img src="./assets/item-3.jpg"class="img-fluid" alt="#">
+                    </div>
+                  </div>
+                  <div class="col-md-9 p-0 py-4 py-md-0">
+                    <div class="px-4">
+                      <h6>lamp</h6>
+                      <div class="rating pb-2">
+                          <i class="fas fa-star"></i>
+                          <i class="fas fa-star"></i>
+                          <i class="fas fa-star"></i>
+                          <i class="fas fa-star"></i>
+                      </div>
+                      <h5>
+                      <small><s class="text-secondary">€125.99</s></small>
+                      <span class="text-color">€120.50</span>
+                      </h5>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <h3 class="text-secondary">Best Sellers</h3>
+                  <div class="row py-3">
+                    <!--iten 1-->
+                    <div class="row py-3">
+                        <div class="col-md-3 p-0">
+                          <div class="items-border">
+                              <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+                          </div>
+                        </div>
+                        <div class="col-md-9 p-0 py-4 py-md-0">
+                          <div class="px-4">
+                            <h6>Vinyl Top Folding Table</h6>
+                            <div class="rating pb-2">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <h5>
+                            <small><s class="text-secondary">€155.99</s></small>
+                            <span class="text-color">€130.50</span>
+                            </h5>
+                          </div>
+                        </div>
+                      </div>
+                      <!--item 2-->
+                      <div class="row py-3">
+                          <div class="col-md-3 p-0">
+                            <div class="items-border">
+                                <img src="./assets/item-3.jpg"class="img-fluid" alt="#">
+                            </div>
+                          </div>
+                          <div class="col-md-9 p-0 py-4 py-md-0">
+                            <div class="px-4">
+                              <h6>Vinyl Top Folding Table</h6>
+                              <div class="rating pb-2">
+                                  <i class="fas fa-star"></i>
+                                  <i class="fas fa-star"></i>
+                                  <i class="fas fa-star"></i>
+                                  <i class="fas fa-star"></i>
+                              </div>
+                              <h5>
+                              <small><s class="text-secondary">€225.99</s></small>
+                              <span class="text-color">€220.50</span>
+                              </h5>
+                            </div>
+                          </div>
+                        </div>
+                        <!--item 3-->
+                        <div class="row py-3">
+                            <div class="col-md-3 p-0">
+                              <div class="items-border">
+                                  <img src="./assets/item-2.jpg"class="img-fluid" alt="#">
+                              </div>
+                            </div>
+                            <div class="col-md-9 p-0 py-4 py-md-0">
+                              <div class="px-4">
+                                <h6>Vinyl Top Folding Table</h6>
+                                <div class="rating pb-2">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <h5>
+                                <small><s class="text-secondary">€25.99</s></small>
+                                <span class="text-color">€20.50</span>
+                                </h5>
+                              </div>
+                            </div>
+                          </div>
+                  </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <h3 class="text-secondary">Featured</h3>
+                   <div class="row py-3">
+                     <!--item 1-->
+                     <div class="row py-3">
+                        <div class="col-md-3 p-0">
+                          <div class="items-border">
+                              <img src="./assets/item-2.jpg"class="img-fluid" alt="#">
+                          </div>
+                        </div>
+                        <div class="col-md-9 p-0 py-4 py-md-0">
+                          <div class="px-4">
+                            <h6>Vinyl Top Folding Table</h6>
+                            <div class="rating pb-2">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <h5>
+                            <small><s class="text-secondary">€125.99</s></small>
+                            <span class="text-color">€120.50</span>
+                            </h5>
+                          </div>
+                        </div>
+                      </div>
+                      <!--item 2-->
+                      <div class="row py-3">
+                          <div class="col-md-3 p-0">
+                            <div class="items-border">
+                                <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+                            </div>
+                          </div>
+                          <div class="col-md-9 p-0 py-4 py-md-0">
+                            <div class="px-4">
+                              <h6>Vinyl Top Folding Table</h6>
+                              <div class="rating pb-2">
+                                  <i class="fas fa-star"></i>
+                                  <i class="fas fa-star"></i>
+                                  <i class="fas fa-star"></i>
+                                  <i class="fas fa-star"></i>
+                              </div>
+                              <h5>
+                              <small><s class="text-secondary">€125.99</s></small>
+                              <span class="text-color">€120.50</span>
+                              </h5>
+                            </div>
+                          </div>
+                        </div>
+                        <!--item 3-->
+                        <div class="row py-3">
+                            <div class="col-md-3 p-0">
+                              <div class="items-border">
+                                  <img src="./assets/item-3.jpg"class="img-fluid" alt="#">
+                              </div>
+                            </div>
+                            <div class="col-md-9 p-0 py-4 py-md-0">
+                              <div class="px-4">
+                                <h6>Vinyl Top Folding Table</h6>
+                                <div class="rating pb-2">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <h5>
+                                <small><s class="text-secondary">€325.99</s></small>
+                                <span class="text-color">€300.50</span>
+                                </h5>
+                              </div>
+                            </div>
+                          </div>
+                   </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--/new best sellers section-->
+      <!--brand-->
+      <div class="container-fluid">
+        <div class="slider-brand">
+          <div class="slider-five px-5">
+            <div>
+                <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+            </div>
+            <div>
+                <img src="./assets/item-2.jpg"class="img-fluid" alt="#">
+            </div>
+            <div>
+                <img src="./assets/item-3.jpg"class="img-fluid" alt="#">
+            </div>
+            <div>
+                <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+            </div>
+            <div>
+                <img src="./assets/item-2.jpg"class="img-fluid" alt="#">
+            </div>
+            <div>
+                <img src="./assets/item-3.jpg"class="img-fluid" alt="#">
+            </div>
+            <div>
+                <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+            </div>
+          </div>
+            <div class="slider-btn">
+              <span class="prev position-top"><i class="fas fa-chevron-left"></i></span>
+              <span class="next position-top right-0"><i class="fas fa-chevron-right"></i>
+              </span>
+            </div>
+        </div>
+      </div>
+      <!--/brand-->
  </main>
 
   <!--/main section-->
