--- a/index.html
+++ b/index.html
@@ -778,11 +778,145 @@
         </div>
       </div>
      <!--/our clints-->
+
+     <!--facilities-->
+     <div class="container-fluid">
+       <div class="site-info">
+         <div class="row text-center py-3 bg-primary-color m-0">
+           <!--no 1-->
+           <div class="col-md-4 col-sm-12 my-md-0 my-4">
+             <div class="row justify-content-center text-light">
+              <i class="fas fa-rocket fa-4x px-4"></i>
+              <div class="py-2 font-roboto text-left">
+                <h6 class="m-0">Free Shipping & Return</h6>
+                <small>Free Shipping On Orders Over €60.00</small>
+              </div>
+             </div>
+           </div>
+           <!--/no 1-->
+           <!--no 2-->
+           <div class="col-md-4 col-sm-12 my-md-0 my-4">
+              <div class="row justify-content-center text-light">
+                  <i class="fas fa-hand-holding fa-4x px-4"></i>
+                  <div class="py-2 font-roboto text-left">
+                    <h6 class="m-0">Money Guarantee</h6>
+                    <small>30 days money back guarantee</small>
+                  </div>
+                 </div>
+                </div>
+           <!--/no 2-->
+           <!--no 3-->
+           <div class="col-md-4 col-sm-12 my-md-0 my-4">
+              <div class="row justify-content-center text-light">
+                  <i class="fas fa-headphones fa-4x px-4"></i>
+                  <div class="py-2 font-roboto text-left">
+                    <h6 class="m-0">On Line Support</h6>
+                    <small>We Support online 24 hours a day</small>
+                  </div>
+                 </div>
+                </div>
+          <!--/no 3-->
+         </div>
+       </div>
+     </div>
+     <!--/facilities-->
  </main>
 
   <!--/main section-->
   <footer>
-
+    <div class="container-fluid px-5">
+      <div class="row">
+        <!--sec 1-->
+        <div class="col-md-4 col-sm-12">
+          <h4>Contact Us</h4>
+          <div class="row pl-md-1 text-secondary">
+            <div class="col-12">
+              <i class="fa fa-home px-md-2"></i>
+              <small>No 1 Main Street Offaly Ireland</small>
+            </div>
+          </div>
+          <div class="row pl-md 1 text-secondary py-4">
+            <div class="col-12">
+                <i class="fa fa-paper-plane px-md-2"></i>
+                <small>www.onlineshop.com</small>
+              </div>
+            </div>
+            <div class="row pl-md 1 text-secondary">
+              <div class="col-12">
+                  <i class="fa fa-phone-volume px-md-2"></i>
+                  <small>09064-12345</small>
+                </div>
+              </div>
+          <div class="row social text-secondary">
+            <div class="col-12 py-3">
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-google-plus-g"></i>
+              <i class="fab fa-skype"></i>
+              <i class="fab fa-pintrest-p"></i>
+              <i class="fab fa-youtube"></i>
+              <i class="fab fa-linkedin-in"></i>
+            </div>
+          </div>
+        </div>
+        <!--/sec 1-->
+        <!--sec 2-->
+        <div class="col-md-2 col-sm-12">
+          <h4>Our Services</h4>
+          <div class="d-flex flex-column pl-md-3">
+            <small class="pt-0">Ireland</small>
+            <small>England</small>
+            <small>New York</small>
+            <small>Chacago</small>
+          </div>
+        </div>
+        <!--/sec 2-->
+        <!--sec 3-->
+        <div class="col-md-2 col-sm-12">
+            <h4>Extras</h4>
+            <div class="d-flex flex-column pl-md-3">
+              <small class="pt-0">About Store</small>
+              <small>New Collection</small>
+              <small>Contact Us</small>
+              <small>Latest News</small>
+              <small>Sitemap</small>
+            </div>
+        </div>
+        <!--/sec 3-->
+        <!--sec 4-->
+        <div class="col-md-4 follow-us col-sm-12">
+          <h4>Follow Instagram</h4>
+          <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+        </div>
+        <!--/sec 4-->
+      </div>
+    </div>
+    <!--news sec-->
+    <div class="container-fluid news pt-5">
+      <div class="row">
+        <div class="col-md-6 col-12 pl-5">
+          <h4 class="primary-color font-roboto m-0 p-0">Need Help? Call Our Team</h4>
+          <p class="m-0 p-0 text-secondary">
+            Support Team 24/7 At 09064-12345
+          </p>
+        </div>
+        <div class="col-md-4 col-12 my-md-0 my-3 pl-md-0 pl-5">
+          <input type="text" class="form-control border-0 bg-light" placeholder="Enter Your Email Address">
+        </div>
+        <div class="col-md-2 col-12 my-md-0 my-3 pl-md-0 pl-5">
+          <button class="btn bg-primary-color text-white">Subscribe</button>
+        </div>
+      </div>
+    </div>
+    <!--/news sec-->
+    <!--payment sec-->
+    <div class="container text-center">
+      <p class="pt-5">
+          <img src="./assets/item-3.jpg"class="img-fluid" alt="#">
+      </p>
+      <small class="text-secondary py-4">Online Store. All Rights Reserved</small>
+    </div>
+    <!--/payment sec-->
   </footer>
   <!--js CDN-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
