--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="col-md-4 col-sm-12 col-12">
           <div class="btn-group">
             <!--add text-white after my-2-->
-            <button class="btn border dropdown-toggle my-md-4 my-2" data-toggle="dropdown" area-haspopup="true" aria-expanded="false">USD</button>
+            <button class="btn border dropdown-toggle my-md-4 my-2" data-toggle="dropdown" area-haspopup="true" aria-expanded="false">Euro</button>
             <div class="dropdown-menu">
               <a href="#" class="dropdown-item">ERU-Euro</a>
               <a href="#" class="dropdown-item">ERU-Euro</a>
@@ -119,31 +119,31 @@
         <div class="site-slider-two px-md-4">
             <div class="row slider-two-center">
                 <div class="col-md-2 product pt-md-5 pt-4">
-                    <img src="./assets/item-1.jpg" alt="#">
+                    <img src="./assets/image-1.jpg" alt="#">
                     <span class="border site-btn btn-span">SOFA & CHAIR</span>
 
                 </div> <div class="col-md-2 product pt-md-5 pt-4">
-                  <img src="./assets/item-2.jpg" alt="#">
+                  <img src="./assets/image-2.jpg" alt="#">
                   <span class="border site-btn btn-span">FURNITURE & DECOR</span>
 
               </div>
               <div class="col-md-2 product pt-md-5 pt-4">
-                <img src="./assets/item-3.jpg" alt="#">
+                <img src="./assets/image-3.jpg" alt="#">
                 <span class="border site-btn btn-span">LAMP & LIGHTING</span>
 
             </div>
             <div class="col-md-2 product pt-md-5 pt-4">
-              <img src="./assets/item-1.jpg" alt="#">
+              <img src="./assets/image-4.jpg" alt="#">
               <span class="border site-btn btn-span">SOUND & LIFE </span>
 
           </div>
           <div class="col-md-2 product pt-md-5 pt-4">
-            <img src="./assets/item-2.jpg" alt="#">
+            <img src="./assets/image-5.jpg" alt="#">
             <span class="border site-btn btn-span">APPLIANCES</span>
 
         </div>
         <div class="col-md-2 product pt-md-5 pt-4">
-          <img src="./assets/item-3.jpg" alt="#">
+          <img src="./assets/image-6.jpg" alt="#">
           <span class="border site-btn btn-span">LAMP & LIGHTING</span>
 
         </div>
@@ -179,7 +179,7 @@
         <div class="slider-three row text-center px-4">
           <!--item 1-->
           <div class="col-md-2 product pt-md-5">
-              <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+              <img src="./assets/image-7.jpg"class="img-fluid" alt="#">
               <div class="cart-details">
                 <h6 class="pro-title p-0">Vinyl Top Folding Table</h6>
                 <div class="rating">
@@ -192,7 +192,7 @@
                 <div class="pro-price py-2">
                   <h5>
                     <small><s class="text-secondary">€125.99</s></small>
-                    <span>€120.00</span>
+                    <span>€120.00000</span>
                   </h5>
 
                 </div>
